<resources>
    <string name="app_name">Fipp</string>
    <string name="title_income">Ingresos</string>
    <string name="title_expenses">Egresos</string>
    <string name="title_home">Home</string>
    <string name="title_perfil">Perfil</string>
    <string name="title_login">INICIA SESIÓN</string>
    <string name="login_welcome">BIENVENIDO</string>
    <string name="login_email">Dirección de Email</string>
    <string name="login_btn_email">Iniciar sesión con Email</string>
    <string name="login_btn_google">Iniciar sesión con Google</string>
    <string name="login_forget_password">¿Olvidaste tu contraseña?</string>
    <string name="login_no_account">¿Aún no tienes cuenta?</string>
    <string name="login_create_account">Crea Una</string>
    <string name="login_password_hint">Contraseña</string>
    <string name="create_account_title">REGISTRATE</string>
    <string name="create_account_main_header">CREAR UNA CUENTA</string>
    <string name="name">Nombre</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="btn_email">Registrarse con Email</string>
    <string name="btn_google">Registrarse con Google</string>
    <string name="already_account">¿Ya tienes una cuenta?</string>
    <string name="login">Inicia sesión</string>
    <string name="title_activity_estadistica_ingresos">EstadisticaIngresosActivity</string>
    <string name="section_month">Mes</string>
    <string name="section_week">semana</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Start statistics string values -->
    <string name="income_statistics_title">INGRESOS</string>
    <string name="expenses_statistics_title">EGRESOS</string>
    <string name="statistics_subtitle"><b>BALANCE</b></string>
    <string name="statistics_actual">ACTUAL</string>
    <string name="statistics_gap">DESFASE</string>
    <string name="statistics_budget">PRESUPUESTO</string>
    <string name="statistics_date">FECHA</string>
    <string name="statistics_amount">IMPORTE</string>
    <string name="statistics_category">CATEGORÍA</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_top_bar">TopBarActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- End statistics string values -->

    <!-- Start income categories string values -->
    <string name="income_categories_title_1">INGRESOS</string>
    <string name="income_categories_title_2">CATEGORÍAS</string>
    <string name="income_categories_title_3">MIS CATEGORÍAS</string>
    <string name="income_categories_btn_text">REGISTRAR NUEVA CATEGORÍA</string>
    <!-- End income categories string values -->

    <!-- Start income new categories string values -->
    <string name="income_add_categories_title_1">INGRESOS</string>
    <string name="income_add_categories_title_2">REGISTRAR CATEGORÍA</string>
    <string name="income_add_categories_placeholder">Nombre de la Categoría...</string>
    <string name="income_add_categories_subcategory">SUBCATEGORÍA</string>
    <string name="income_add_categories_btn_text">REGISTRAR</string>
    <!-- End income new categories string values -->

    <!-- Start expense categories string values -->
    <string name="outcome_categories_title_1">GASTOS</string>
    <string name="outcome_categories_title_2">CATEGORÍAS</string>
    <string name="outcome_categories_title_3">MIS CATEGORÍAS</string>
    <string name="outcome_categories_btn_text">REGISTRAR NUEVA CATEGORÍA</string>
    <!-- End expense categories string values -->

    <!-- Start expense new categories string values -->
    <string name="expense_add_categories_title_1">GASTOS</string>
    <string name="expense_add_categories_title_2">REGISTRAR CATEGORÍA</string>
    <string name="expense_add_categories_placeholder">Nombre de la Categoría...</string>
    <string name="expense_add_categories_subcategory">SUBCATEGORÍA</string>
    <string name="expense_add_categories_btn_text">REGISTRAR</string>
    <!-- End expense new categories string values -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shared_prefences">PREFERENCES_FILE</string>

    <!-- String login -->
    <string name="client_id">85270695483-oq53cdau91hm1f5qd96b43fjfpvpko2p.apps.googleusercontent.com</string>
    <string name="title_activity_subcategory">SubcategoryActivity</string>
    <string name="income_add_categories_title_subcategory">SELECCIONA SUBCATEGORÍA</string>
    <string name="cantidad_de_ingreso">Cantidad de ingreso...</string>
    <string name="mxn">MXN</string>
    <string name="registrar_ingreso">REGISTRAR INGRESO</string>


</resources>