<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/verde">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="12dp"
        app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginHorizontal="24dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/title_login"
                android:textColor="@color/gris_oscuro"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="bottom"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_black"
                android:text="@string/login_welcome"
                android:textColor="@color/gris_oscuro"
                android:textSize="26sp"
                android:layout_weight="6"/>

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/login_email"
                android:textSize="12sp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/editTextPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:textSize="12sp"
                android:hint="@string/login_password_hint"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/morado"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/login_btn_email"
                android:textAllCaps="false"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnGoogle"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/login_btn_google"
                android:textAllCaps="false"
                android:textColor="@color/morado"
                app:strokeColor="@color/morado"
                app:strokeWidth="2dp"
                android:layout_marginBottom="12dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/forgetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_forget_password"
                android:textAlignment="center"
                android:textColor="@color/gris_oscuro"
                android:fontFamily="@font/roboto_bold"
                android:textSize="12sp"
                android:layout_marginVertical="12dp"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="20">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="24dp"
                    android:background="@color/black"
                    android:layout_gravity="bottom"/>
            </LinearLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_no_account"
                android:textAlignment="center"
                android:textColor="@color/gris_oscuro"
                android:fontFamily="@font/roboto_bold"
                android:textSize="12sp"
                android:layout_marginVertical="12dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/textViewCreateAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_create_account"
                android:textColor="@color/morado"
                android:textAlignment="center"
                android:layout_marginBottom="32dp"
                android:layout_weight="1"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>



</RelativeLayout>