<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.expenses.ExpensesBalanceFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="15sp"
        android:text="@string/expenses_statistics_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <TextView
        android:id="@+id/tvIncome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="30sp"
        android:text="@string/statistics_subtitle"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <include layout="@layout/activity_chart"
        android:id="@+id/lineChart"/>

    <!--  Color for ACTUAL, DESFASE AND PRESUPUESTO  -->
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center">
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="15sp"
            android:gravity="center"

            android:text="@string/statistics_actual"
            android:textAppearance="?android:attr/textAppearanceLarge"

            android:drawablePadding="5dp"
            android:maxLines="1"
            app:drawableLeftCompat="@drawable/circle_red" />
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="15sp"
            android:text="@string/statistics_budget"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:drawablePadding="5dp"
            android:maxLines="1"
            app:drawableLeftCompat="@drawable/circle_gray"/>
    </LinearLayout>


    <!--   Progress bar     -->
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/progressBar"
        android:indeterminateTintMode="src_atop"
        android:progressDrawable="@drawable/custom_progress_bar"
        android:indeterminateTint="@color/gris"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:progress="50" />


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        android:layout_weight="1">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:id="@+id/tableLayout"
            android:paddingRight="5dp">

            <TableRow
                android:background="@android:color/transparent"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/statistics_date"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/statistics_category"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/statistics_amount"
                    android:gravity="center"/>
            </TableRow>


        </TableLayout>
    </ScrollView>

</LinearLayout>