<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="45dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/gris_oscuro"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/outcome_categories_title_1"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_black"
            android:text="@string/outcome_categories_title_2"
            android:textColor="@color/gris_oscuro"
            android:textSize="30sp"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_black"
            android:text="@string/outcome_categories_title_3"
            android:textColor="@color/gris_oscuro"
            android:textSize="16sp"
            android:layout_marginVertical="15dp"
            android:layout_weight="1"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="#F4F4F4"
            app:cardCornerRadius="20dp"
            android:layout_weight="1">


            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginVertical="10dp"
                android:columnCount="2"
                android:rowCount="4"
                >
                <include layout="@layout/activity_categories_view" />

                <include layout="@layout/activity_categories_view" />

                <include layout="@layout/activity_categories_view" />

                <include layout="@layout/activity_categories_view" />

                <include layout="@layout/activity_categories_view" />

                <include layout="@layout/activity_categories_view" />

                <include layout="@layout/activity_categories_view" />

                <include layout="@layout/activity_categories_view" />

            </GridLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/buttonRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/morado"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/outcome_categories_btn_text"
            android:textAllCaps="false"
            android:layout_marginVertical="40dp"
            android:layout_weight="1"/>

    </LinearLayout>
</LinearLayout>