<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.income.IncomeCategoriesFragment">

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/top_bar_period"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="3dp"
        android:layout_marginHorizontal="24dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/gris_oscuro"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/income_categories_title_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_black"
            android:text="@string/income_categories_title_2"
            android:textColor="@color/gris_oscuro"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/income_categories_title_3"
            android:textColor="@color/gris_oscuro"
            android:textSize="16sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="13dp"
            app:cardBackgroundColor="#F4F4F4"
            app:cardCornerRadius="20dp">

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="2dp"
                android:columnCount="2"
                android:padding="4dp"
                android:rowCount="4">

                <include layout="@layout/activity_categories_view" />

                <include layout="@layout/activity_categories_view" />

                <include layout="@layout/activity_categories_view" />

                <include layout="@layout/activity_categories_view" />

                <include layout="@layout/activity_categories_view" />

                <include layout="@layout/activity_categories_view" />

                <include layout="@layout/activity_categories_view" />

                <include layout="@layout/activity_categories_view" />

            </GridLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_marginHorizontal="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/morado"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/income_categories_btn_text"
        android:textAllCaps="false" />

</LinearLayout>